# startup-evaluation-ai-analyst

./: .gitignore  README.md  cli_client.py  db.sqlite3  manage.py  requirements.txt
financial_agent/: apps.py  dataclass.py  decorator.py  models.py  urls.py  utils.py  views.py
financial_agent/agents/: categorization_agent.py  goal_planning_agent.py  portfolio_analysis_agent.py  portfolio_rebalancing_agent.py
financial_agent/agents/goals/: education_goal_agent.py  goal_with_loan_agent.py  goals_categorization_agent.py  travel_goal_agent.py
financial_agent/services/: chat_history_manager.py  data_service.py  perplexity_service.py  response_service.py  shield_service.py
ind_weaver_ai/: asgi.py  settings.py  urls.py  wsgi.py
startup_eval_app/: README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
startup_eval_app/agents/: business_agent.py  funding_agent.py  industry_agent.py  timing_agent.py  trends_agent.py
startup_eval_app/data/: startups.db
startup_eval_app/utils/: charting.py  db.py  gemini_client.py  orchestrator.py  pdf_parser.py
